# news-feed-mailer

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: news-mailer-8am.yml  news-mailer-asia-market.yml  news-mailer-europe-market.yml  news-mailer-us-market.yml  news-mailer.yml  send-news.yml
src/news_mailer/: config.py  email_composer.py  email_sender_gmail.py  logger.py  main.py  news_fetcher.py  oauth.py
src/news_mailer/config/: __init__.py  base_config.py  topic_loader.py  topics.yaml
src/news_mailer/service/: __init__.py
src/news_mailer/service/auth/: __init__.py  helper.py  oauth.py
src/news_mailer/service/mail/: __init__.py  email_composer.py  email_sender_brevo.py  email_sender_gmail.py
src/news_mailer/service/news/: __init__.py  news_fetcher.py  utils.py
src/news_mailer/service/news/type/: topic_queries.py
src/news_mailer/utils/: __init__.py
